definitions/bar-labelled-pod.yaml
apiVersion: v1
# Which kind of object are we defining?
kind: Pod

metadata:
  name: bar
  # Labels are part of the Pod metadata
  labels:
    env: staging

spec:
  restartPolicy: Never
  containers:
  # A plain Nginx server running as a container
  - name: nginx-container
    image: nginx
