definitions/ingress-example.yaml
# A pod that will serve the string `foo` through HTTP
kind: Pod
apiVersion: v1
metadata:
  name: foo-app
  labels:
    app: foo
spec:
  containers:
  - name: foo-app
    image: hashicorp/http-echo:0.2.3
    args:
    - "-text=foo"
---
# Expose the foo-app pod internally with a service
kind: Service
apiVersion: v1
metadata:
  name: foo-service
spec:
  selector:
    app: foo
  ports:
  - port: 5678
---
# A pod that will serve the string `bar` through HTTP
kind: Pod
apiVersion: v1
metadata:
  name: bar-app
  labels:
    app: bar
spec:
  containers:
  - name: bar-app
    image: hashicorp/http-echo:0.2.3
    args:
    - "-text=bar"
---
# Expose the bar-app pod internally with a service
kind: Service
apiVersion: v1
metadata:
  name: bar-service
spec:
  selector:
    app: bar
  ports:
  - port: 5678
---
# Deploy an Ingress that will route requests to the
# services above depending on the requested URL.
# Note the Ingress spec has the same format whatever
# the Ingress Controller: it's Nginx for us, but
# the following definition would have been the same
# using (e.g.) Ambassador.
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: example-ingress
spec:
  rules:
  - http:
      paths:
      - path: /foo
        backend:
          serviceName: foo-service
          servicePort: 5678
      - path: /bar
        backend:
          serviceName: bar-service
          servicePort: 5678
